--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "vlucas/phpdotenv": "^5.6@dev",
         "google/apiclient": "^2.0@dev",
         "phpoffice/phpspreadsheet": "dev-master",
-        "automattic/woocommerce": "dev-trunk"
+        "automattic/woocommerce": "dev-trunk",
+        "cocur/slugify": "dev-master"
     },
     "license": "MIT",
     "autoload": {
