Update Prospector functionality: adjust data range in fill_products_sheets method from C to D and comment out debug output for cleaner execution.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Developer contact phone number
-dev_contact = "+"
+dev_contact = ""
 
 # API key for accessing the notification service
 api_key = ""
