--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         ],
         "psr-4": {
             "WoowaWebhooks\\": "src/",
-            "WoowaWebhooks\\Tests": "tests/"
+            "WoowaWebhooks\\Tests\\": "tests/"
         }
     },
     "authors": [
@@ -29,6 +29,6 @@
     ],
     "minimum-stability": "dev",
     "require-dev": {
-        "phpunit/phpunit": "^12.3@dev"
+        "phpunit/phpunit": "^11"
     }
 }
